Fix Mobile Overflow Issues Fixes #58

--- a/wp-content/themes/k1-theme/src/styles/components/swipers/_abstracts.scss
+++ b/wp-content/themes/k1-theme/src/styles/components/swipers/_abstracts.scss
@@ -1,5 +1,5 @@
 %slides {
-	margin-left: 4rem;
+	margin-left: 0rem;
 	margin-right: 4rem;
 	padding: 5rem;
 }
